Update website URL in widget configuration

--- a/widget.config.json
+++ b/widget.config.json
@@ -18,5 +18,5 @@
   "authorName": "vika",
   "authorLink": "https://vika.cn/developers",
   "authorEmail": "developer@vikadata.com",
-  "website": "https://bbs.vika.cn/article/155"
+  "website": "https://help.vika.cn/docs/guide/intro-widget-funnel-chart"
 }
